[package]
name = "tilemap"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lerp = "0.4"
num = "0.4"
# Optional dependencies
bevy = {version="0.10.0", optional=true}

[dev-dependencies]
approx = "0.5"

[features]
bevy = ["dep:bevy"]
